move archive recipe to goose server
