# crates/goose-server/src/routes/recipe.rs
@@ -84,6 +84,11 @@ pub struct RecipeManifestResponse {
     id: String,
 }
 
+#[derive(Debug, Deserialize, ToSchema)]
+pub struct ArchiveRecipeRequest {
+    id: String,
+}
+
 #[derive(Debug, Serialize, ToSchema)]
 pub struct ListRecipeResponse {
     recipe_manifest_responses: Vec<RecipeManifestResponse>,
@@ -251,6 +256,7 @@ async fn list_recipes(
     Query(request): Query<ListRecipeRequest>,
 ) -> Result<Json<ListRecipeResponse>, StatusCode> {
     verify_secret_key(&headers, &state)?;
+
     let recipe_manifest_with_paths =
         list_sorted_recipe_manifests(request.include_archived).unwrap();
     let mut recipe_file_hash_map = HashMap::new();
@@ -273,6 +279,31 @@ async fn list_recipes(
     }))
 }
 
+#[utoipa::path(
+    post,
+    path = "/recipes/archive",
+    request_body = ArchiveRecipeRequest,
+    responses(
+        (status = 204, description = "Recipe archived successfully"),
+        (status = 401, description = "Unauthorized - Invalid or missing API key"),
+        (status = 500, description = "Internal server error")
+    ),
+    tag = "Recipe Management"
+)]
+async fn archive_recipe(
+    State(state): State<Arc<AppState>>,
+    headers: HeaderMap,
+    Json(request): Json<ArchiveRecipeRequest>,
+) -> StatusCode {
+    if verify_secret_key(&headers, &state).is_err() {
+        return StatusCode::UNAUTHORIZED;
+    }
+    let recipe_file_hash_map = state.recipe_file_hash_map.lock().await;
+    let file_path = recipe_file_hash_map.get(&request.id).unwrap();
+    RecipeManifest::archive(file_path).unwrap();
+    StatusCode::NO_CONTENT
+}
+
 pub fn routes(state: Arc<AppState>) -> Router {
     Router::new()
         .route("/recipes/create", post(create_recipe))
@@ -280,6 +311,7 @@ pub fn routes(state: Arc<AppState>) -> Router {
         .route("/recipes/decode", post(decode_recipe))
         .route("/recipes/scan", post(scan_recipe))
         .route("/recipes/list", get(list_recipes))
+        .route("/recipes/archive", post(archive_recipe))
         .with_state(state)
 }
 
